@@ -23,13 +23,20 @@ public class BenchSimLJMD3DFast {
 
     private Integrator integrator;
 
+    @Param({"vecsys2", "objects", "vecsys1"})
+    private String type;
+
     public static void main(String[] args) throws RunnerException {
 
         Options opts = new OptionsBuilder()
                 .include(BenchSimLJMD3DFast.class.getSimpleName())
+                .addProfiler(StackProfiler.class)
 //                .addProfiler(LinuxPerfAsmProfiler.class)
-                .jvmArgs(
-                        "-XX:+UnlockDiagnosticVMOptions"
+                .jvmArgsPrepend(
+                        "--add-modules=jdk.incubator.vector",
+                        "-XX:TypeProfileLevel=111",
+                        "-XX:+UseVectorApiIntrinsics"
+//                        "-XX:+UnlockDiagnosticVMOptions"
 //                        "-XX:+PrintAssembly",
 //                        "-XX:CompileCommand=print etomica.experimental.VectorSystem3D::sub"
 //                        ,"-XX:-UseSuperWord"
@@ -41,8 +48,9 @@ public class BenchSimLJMD3DFast {
 
     @Setup(Level.Iteration)
     public void setUp() {
-        LJMD3DVecSys sim = new LJMD3DVecSys();
+        LJMD3DVecSys sim = new LJMD3DVecSys(type);
         integrator = sim.integrator;
+        integrator.reset();
     }
 
     @Benchmark
